# trader-bot

./: .gitignore  Cargo.toml  README.md  log_RCNZ.txt  log_ZSE.txt  log_bfb.txt  trader.config.toml
src/: main.rs
src/ab_traders/: ab_traders.rs  mod.rs
src/common/: markets.rs  mod.rs  trader_config.rs  visualizer.rs
src/sa_traders/: log_event.rs  mod.rs  sa_trader_1.rs
src/tr_traders/: mod.rs  tr_trader.rs  tr_trader_1.rs
